look/print.css
/*
 * Stylesheet for printing fsfe.org.
 */

body {
  background: #FFFFFF;
  font-family: "Nimbus Serif L", Georgia, Times, serif;
  font-size: 1em, 12pt;
}

/* Don't use color for links */
a, a:link, a:visited {
  color: #000000;
}

/* Hide sidebar */
#sidebar {
  display: none;
}

#wrapper, #wrapper-inner {
  margin: 0;
  padding:0;
  width: auto;
}

#wrapper-inner {
  border-radius: 0;
  -moz-border-radius: 0;
  -webkit-border-radius: 0;
  -moz-box-shadow: 0;
  box-shadow: 0;
  -webkit-box-shadow: 0;
}

/* We don't need margins for the content */
#content {
  margin: 0;
  padding: 0;
}

/* remove donate box on donation page */
#donate-once {
  display: none;
}

.postit {
  background: #FFFFFF;
}

#footer {
  font-size: 80%;
  border: 5px #FFFFFF solid;
}


#footer div {
  float: none;
}

.newsleft dt span, .newsright dt span {
  color: #000000;
}

